adicionado opção de chamar a senha e liberar da fila do guiche, fila do guiche atualiza a cada segundo e ordena por senha prioritária

--- a/projeto/view/guiche.html
+++ b/projeto/view/guiche.html
@@ -12,14 +12,14 @@
 </head>
 <body>
     <div class="m-auto text-center">
-        <h2>Ultima chamada: </h2>
+        <h2>Ultima chamada:<span id="senhaAtual"></span> </h2>
     </div>
     <div class="w-75 m-auto mt-5">
         <div class="d-flex justify-content-between">
             <h3>Fila de Senhas:</h3>
             <div>
-                <button type="button" class="btn btn-primary">Chamar</button>
-                <button type="button" class="btn btn-danger">Rechamar</button>
+                <button type="button" class="btn btn-primary" id="btChamar">Chamar</button>
+                <button type="button" class="btn btn-danger" id="btRechamar">Rechamar</button>
             </div>
         </div>
         <table class="table table-striped align-middle table-bordered" id="tabelaSenhas">
