--- a/projeto/view/painel.html
+++ b/projeto/view/painel.html
@@ -6,12 +6,12 @@
     <link rel="stylesheet" href="./css/painel.css" />
     <link rel="stylesheet" href="./css/jornal.css">
     <script src="./js/painel.js" defer></script>
+    <script src="./js/moment.js"></script>
   </head>
   <body>
     <div>
       <div id="top">
         <span id="hora"></span>
-        <div id="temperatura"></div>
       </div>
       <div id="senha">
         <div class="container">
