--- a/projeto/view/css/painel.css
+++ b/projeto/view/css/painel.css
@@ -30,11 +30,6 @@ html,body{
     font-weight: bold;
   }
   
-  #temperatura{
-    display: flex;
-    flex-direction: row;
-    width: fit-content;
-  }
   
   #top{
     display: flex;
@@ -47,6 +42,7 @@ html,body{
     line-height: 10vh;
     font-size: 10vh;
     padding-bottom: 10px;
+    justify-content: center;
   }
   
   #senha{
