adicionado sql do banco criado arquivo license e readme ajustado layout pagina impressora criado imagens do software

--- a/projeto/view/admin/guiche.html
+++ b/projeto/view/admin/guiche.html
@@ -22,6 +22,8 @@
 </head>
 <body class="escondido p-5">
 
+    <h2 class="text-center">Administrador - Guichês</h2>
+
     <button type="button" class="btn btn-danger" id="logout" onclick="logout()">Sair</button>
 
 
