--- a/projeto/view/index.html
+++ b/projeto/view/index.html
@@ -12,7 +12,7 @@
         }
     </style>
 </head>
-<body class="d-flex flex-column align-content-center h-100 justify-content-center gap-3">
+<body class="d-flex flex-column align-content-center h-100 justify-content-center gap-3 bg-gradient">
     <h3 class="text-center">Selecione a página que deseja acessar</h3>
     <div class="d-flex flex-row align-content-center justify-content-center gap-3">
         <a href="guiche" type="button" class="btn btn-primary align-self-center">Atendimento</a>
